--- a/frontend/webapp14_2/src/app/templates/review/review.component.html
+++ b/frontend/webapp14_2/src/app/templates/review/review.component.html
@@ -8,7 +8,7 @@
   <hr class="horizontal light mt-0 mb-2">
   <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link text-white" (click)="goToDashboard()">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10"></i>
@@ -16,7 +16,7 @@
           <span class="nav-link-text ms-1">Panel de Administracion</span>
         </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isAdmin">
         <a class="nav-link text-white" (click)="goToUserPermissions()">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10"></i>
@@ -27,7 +27,7 @@
       <li class="nav-item mt-3">
         <h5 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Gestion de cuentas</h5>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="isEditor">
         <a class="nav-link text-white" (click)="goToEvents()">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10"></i>
