--- a/frontend/webapp14_2/src/app/page/page.component.html
+++ b/frontend/webapp14_2/src/app/page/page.component.html
@@ -11,7 +11,7 @@
         <li class="nav-item"><a class="nav-link" href="#eventosDestacados">Destacados</a></li>
         <li class="nav-item"><a class="nav-link" href="#eventosRecientes">Recientes</a></li>
         <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
-        <li class="nav-item"><a class="nav-link" href="profile" *ngIf="isUser">Mi Perfil</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToProfile()" *ngIf="isUser">Mi Perfil</a></li>
 
       </ul>
     </div>
