--- a/frontend/webapp14_2/src/app/templates/profile/profile.component.html
+++ b/frontend/webapp14_2/src/app/templates/profile/profile.component.html
@@ -1,6 +1,60 @@
-
-
-<div class="main-content position-relative max-height-vh-100 h-100">
+<div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-2 fixed-start ms-2 bg-gradient-dark" id="sidenav-main">
+  <div class="sidenav-header">
+    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
+    <a class="navbar-brand m-0" (click)="goToIndex()" target="_blank">
+      <span class="ms-1 font-weight-bold text-white">Volver a TicketEvent</span>
+    </a>
+  </div>
+  <hr class="horizontal light mt-0 mb-2">
+  <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngIf="isAdmin">
+        <a class="nav-link text-white" (click)="goToDashboard()">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Panel de Administracion</span>
+        </a>
+      </li>
+      <li class="nav-item" *ngIf="isAdmin">
+        <a class="nav-link text-white" (click)="goToUserPermissions()">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1" >Permisos Edicion</span>
+        </a>
+      </li>
+      <li class="nav-item mt-3">
+        <h5 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Gestion de cuentas</h5>
+      </li>
+      <li class="nav-item" *ngIf="isEditor">
+        <a class="nav-link text-white" (click)="goToEvents()">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1" >Gestión de Eventos</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" (click)="goToProfile()">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1" >Mi Perfil</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" (click)="goToReview()">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1" >Reviews</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
 
   <div class="container-fluid px-2 px-md-4">
     <div class="page-header min-height-300 border-radius-xl mt-4"
