Imagenes en showEvent

--- a/frontend/webapp14_2/src/app/templates/show-event/show-event.component.html
+++ b/frontend/webapp14_2/src/app/templates/show-event/show-event.component.html
@@ -1,7 +1,7 @@
 <div class="container px-4 px-lg-5 my-5">
   <div class="row gx-4 gx-lg-5 align-items-center">
     <div class="col-md-6">
-      <!--<img class="card-img-top mb-5 mb-md-0" [src]="event?.image ? '/events/' + event.id + '/image' : '/images/no_image.png'" [alt]="event?.title ? event.title : 'No Image'">-->
+      <img class="card-img-top mb-5 mb-md-0" class="img-fluid" [src]="imageUrl" alt="Event Image">
     </div>
     <div class="col-md-6">
       <h1 class="display-5 fw-bolder">{{ event?.title }}</h1>
