--- a/frontend/webapp14_2/src/app/templates/edit-event/edit-event.component.html
+++ b/frontend/webapp14_2/src/app/templates/edit-event/edit-event.component.html
@@ -1,1 +1,24 @@
-<p>edit-event works!</p>
+<form>
+  <label for="floatingTitle">Evento:</label>
+  <input type="text" [(NgModel)]="titleEvent" id="floatingTitle" name="title" required>
+
+  <label for="floatingDate">Fecha</label>
+  <input type="text" [(NgModel)]="dateEvent" class="form-control" id="floatingDate" name="date" required>
+
+  <label for="floatingDuration">Duracion</label>
+  <input type="text" [(NgModel)]="durationEvent" class="form-control" id="floatingDuration" name="duration" required>
+
+  <label for="floatingPlace">Lugar</label>
+  <input type="text" [(NgModel)]="placeEvent" class="form-control" id="floatingPlace" name="place" required>
+
+  <label for="floatingDescription">Descripcion</label>
+  <input type="text" [(NgModel)]="descriptionEvent" class="form-control" id="floatingDescription" name="description" required>
+
+  <label>Subir nueva imagen:</label><br>
+  <input type='file' name='imageField' accept=".jpg, .jpeg" /><br>
+
+  <input type='checkbox' name='removeImage'>
+  <label>Eliminar imagen actual</label><br>
+
+  <button type="submit" (click)="onSubmit()">Guardar cambios</button>
+</form>
