--- a/frontend/webapp14_2/src/app/templates/events/events.component.html
+++ b/frontend/webapp14_2/src/app/templates/events/events.component.html
@@ -1,1 +1,157 @@
-<p>events works!</p>
+<aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-2 fixed-start ms-2 bg-gradient-dark" id="sidenav-main">
+  <div class="sidenav-header bg-gradient-dark">
+    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
+    <a class="navbar-brand m-0" href="/" target="_blank">
+      <span class="ms-1 font-weight-bold text-white">Volver a TicketEvent</span>
+    </a>
+  </div>
+  <hr class="horizontal dark mt-0 mb-2">
+  <div class="collapse navbar-collapse w-auto bg-dark" id="sidenav-collapse-main">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-dark" [routerLink]="['/dashboard']">
+          <div class="text-black text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Panel de Administracion</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" [routerLink]="['/userPermissions']">
+          <div class="text-dark text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Permisos Edicion</span>
+        </a>
+      </li>
+      <li class="nav-item mt-3">
+        <h6 class="ps-4 ms-2 text-uppercase text-xs text-dark font-weight-bolder opacity-8">Gestion de cuentas</h6>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="/events">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Gestión de Eventos</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="profile">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">person</i>
+          </div>
+          <span class="nav-link-text ms-1">Mi Perfil</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="review">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+          <span class="nav-link-text ms-1">Reviews</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</aside>
+
+<main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+  <!-- Navbar -->
+  <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" data-scroll="true">
+    <div class="container-fluid py-1 px-3">
+      <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
+        <ul class="navbar-nav  justify-content-end">
+          <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+            <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
+              <div class="sidenav-toggler-inner">
+                <i class="sidenav-toggler-line"></i>
+                <i class="sidenav-toggler-line"></i>
+                <i class="sidenav-toggler-line"></i>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
+
+  <div class="container-fluid row py-4">
+    <div class="col-12">
+      <div class="card my-4">
+        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+            <h6 class="text-white text-capitalize ps-3">Tabla de eventos</h6>
+          </div>
+        </div>
+
+        <div class="card-body px-0 pb-2">
+          <div class="table-responsive p-0">
+            <table class="table align-items-center mb-0">
+              <thead>
+              <tr>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Evento</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Lugar</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Fecha</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Duración</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 justify-content-center">Descripción</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 justify-content-center">Editar</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let event of allEvents">
+                <td>
+                  <div class="d-flex flex-column justify-content-center">
+                    <h6 class="mb-0 text-sm">{{ event.title }}</h6>
+                    <p class="text-xs text-secondary mb-0">{{ event.id }}</p>
+                  </div>
+                </td>
+                <td>
+                  <div class="d-flex flex-column justify-content-center">
+                    <h6 class="mb-0 text-sm">{{ event.place }}</h6>
+                  </div>
+                </td>
+                <td>
+                  <div class="d-flex flex-column justify-content-center">
+                    <h6 class="mb-0 text-sm">{{ event.date }}</h6>
+                  </div>
+                </td>
+                <td>
+                  <div class="d-flex flex-column justify-content-center">
+                    <h6 class="mb-0 text-sm">{{ event.duration }}</h6>
+                  </div>
+                </td>
+                <td>
+                  <div class="d-flex flex-column justify-content-center">
+                    <h6 class="mb-0 text-sm">{{ event.description }}</h6>
+                  </div>
+                </td>
+                <td>
+                  <input type="hidden" name="id" value="{{ event.id }}">
+                  <a [routerLink]="['/editEvent']" [queryParams]="{ id: event.id }">
+                    <button type="button" class="btn btn-danger">Editar Evento</button>
+                  </a>
+                  <ng-container *ngIf="admin">
+                    <form action="/deleteEvent" method="post">
+                      <input type="hidden" name="id" value="{{ event.id }}">
+                      <input type="hidden" name="_csrf" value="{{ token }}">
+                      <button type="submit" class="btn btn-danger">Borrar Evento</button>
+                    </form>
+                  </ng-container>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid py-4">
+    <div class="row">
+      <div class="col-12">
+        <a class="btn btn-primary btn-xl w-100" [routerLink]="['/NewEvent']">Crear Nuevo Evento</a>
+      </div>
+    </div>
+  </div>
+</main>
