--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -143,7 +143,7 @@
               <tr>
                 <td>
                   <div class="d-flex flex-column justify-content-center">
-                      <h6 class="mb-0 text-sm">{{nick}}</h6>
+                      <h6 class="mb-0 text-sm">{{NICK}}</h6>
                   </div>
                 </td>
                 <td>
