--- a/frontend/webapp14_2/src/app/templates/events/events.component.html
+++ b/frontend/webapp14_2/src/app/templates/events/events.component.html
@@ -54,9 +54,9 @@
     </ul>
   </div>
 </div>
-<div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
-  <div class="container-fluid row py-4">
-    <div class="col-12">
+<div class="main-content w-100  max-height-vh-100 h-100 border-radius-lg">
+  <div class=" container w-100">
+    <div class="row  w-100">
       <div class="card my-4">
         <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
           <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
@@ -65,7 +65,7 @@
         </div>
         <div class="card-body px-0 pb-2">
           <div class="table-responsive p-0">
-            <table class="table align-items-center justify-content-center mb-0">
+            <table class="table align-items-center w-100 justify-content-center mb-0">
               <thead>
               <tr>
                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Evento</th>
