--- a/frontend/webapp14_2/src/app/templates/dashboard/dashboard.component.html
+++ b/frontend/webapp14_2/src/app/templates/dashboard/dashboard.component.html
@@ -59,8 +59,8 @@
   <!-- Navbar -->
   <div class="container-fluid py-4">
     <div class="row">
-      <div class="col-lg-6">
-        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+      <div class="row  w-100">
+        <div class="row  w-100 2 mb-xl-2 mb-6">
           <div class="card">
             <div class="card-header p-4 pt-5">
               <div class="text-end pt-1">
@@ -71,7 +71,7 @@
           </div>
         </div>
 
-        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+        <div class="row  w-100">
           <div class="card">
             <div class="card-header p-4 pt-5">
               <div class="text-end pt-1">
@@ -82,7 +82,7 @@
           </div>
         </div>
 
-        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+        <div class="row  w-100">
           <div class="card">
             <div class="card-header p-4 pt-5">
               <div class="text-end pt-1">
@@ -93,7 +93,7 @@
           </div>
         </div>
 
-        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+        <div class="row  w-100">
           <div class="card">
             <div class="card-header p-4 pt-5">
               <div class="text-end pt-1">
@@ -104,7 +104,7 @@
           </div>
         </div>
 
-        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+        <div class="row  w-100">
           <div class="card">
             <div class="card-header p-4 pt-5">
               <div class="text-end pt-1">
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="col-xl-12 col-sm-12 mb-xl-2 mb-6">
+        <div class="row  w-100">
           <div class="card">
             <div class="card-header p-4 pt-5">
               <div class="text-end pt-1">
@@ -126,7 +126,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6 col-md-8 mt-4 mb-6">
+        <div class="row  w-100">
           <div class="card z-index-2">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
               <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
