--- a/frontend/webapp14_2/src/app/templates/profile/profile.component.html
+++ b/frontend/webapp14_2/src/app/templates/profile/profile.component.html
@@ -64,9 +64,9 @@
     <div class="card-body">
       <div *ngIf="user">
       <div class="row gx-4 mb-2">
-        <div class="col-auto">
+        <div class="row  w-100">
         </div>
-        <div class="col-auto my-auto">
+        <div class="row  w-100">
           <div class="h-100">
             <h5 class="mb-1">
               {{user.name}} {{user.surname}}
@@ -79,11 +79,11 @@
       </div>
       <div class="row">
         <div class="row">
-          <div class="col-12 col-xl-12">
+          <div class="row  w-100">
             <div class="card card-plain h-100">
               <div class="card-header pb-0 p-3">
                 <div class="row">
-                  <div class="col-md-8 d-flex align-items-center">
+                  <div class="row-md-8 d-flex align-items-center">
                     <h6 class="mb-0">Información del perfil</h6>
                   </div>
                   <div class="col-md-4 text-end">
@@ -114,7 +114,7 @@
         </div>
       </div>
         <div class="row">
-          <div class="col-12 col-xl-12">
+          <div class="row  w-100">
             <div class="card card-plain h-100">
               <div class="card-header pb-0 p-3">
                 <div class="row">
