--- a/frontend/webapp14_2/src/app/templates/review/review.component.html
+++ b/frontend/webapp14_2/src/app/templates/review/review.component.html
@@ -56,7 +56,7 @@
 </div>
 <div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
 <div class="container-fluid row py-4">
-  <div class="col-12">
+  <div class="row  w-100">
     <div class="card my-4">
       <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
         <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
