--- a/frontend/webapp14_2/src/app/templates/user-permissions/user-permissions.component.html
+++ b/frontend/webapp14_2/src/app/templates/user-permissions/user-permissions.component.html
@@ -57,7 +57,7 @@
 <div class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
   <div class="container-fluid py-4">
     <div class="row">
-      <div class="col-12">
+      <div class="row  w-100">
         <div class="card my-4">
           <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
             <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
@@ -69,7 +69,7 @@
               <table class="table align-items-center mb-0" *ngFor="let user of users">
                 <thead>
                 <tr>
-                  <th>Nick</th>
+
                   <th>Nombre</th>
                   <th>Email</th>
                   <th>Editor</th>
@@ -78,7 +78,7 @@
                 </thead>
                 <tbody>
                 <tr >
-                  <td>{{ user.NICK }}</td>
+
                   <td>{{ user.name }} {{ user.surname }}</td>
                   <td>{{ user.email }}</td>
                   <td>
