--- a/frontend/webapp14_2/src/app/templates/new-event/new-event.component.html
+++ b/frontend/webapp14_2/src/app/templates/new-event/new-event.component.html
@@ -1,1 +1,56 @@
-<p>new-event works!</p>
+<div class="container">
+  <h3 class="login-heading mb-4">Nuevo Evento</h3>
+
+  <!-- Formulario para crear un nuevo evento -->
+  <form (submit)="submitForm()" enctype="multipart/form-data">
+
+    <div class="form-floating mb-3">
+      <label for="title">Evento:</label>
+      <input type="text" class="form-control" id="title" name="title" [(ngModel)]="newEvent.title" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="date">Fecha:</label>
+      <input type="date" class="form-control" id="date" name="date" [(ngModel)]="newEvent.date" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="hour">Hora del evento:</label>
+      <input type="time" class="form-control" id="hour" name="hour" [(ngModel)]="newEvent.hour" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="duration">Duración del evento:</label>
+      <input type="text" class="form-control" id="duration" name="duration" [(ngModel)]="newEvent.duration" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="place">Lugar:</label>
+      <input type="text" class="form-control" id="place" name="place" [(ngModel)]="newEvent.place" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="category">Categoría:</label>
+      <input type="text" class="form-control" id="category" name="category" [(ngModel)]="newEvent.category" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="n_tickets">Plazas:</label>
+      <input type="number" class="form-control" id="n_tickets" name="n_tickets" [(ngModel)]="newEvent.n_tickets" required>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="description">Descripción:</label>
+      <textarea class="form-control" id="description" name="description" [(ngModel)]="newEvent.description" required></textarea>
+    </div>
+
+    <div class="form-floating mb-3">
+      <label for="imageField">Foto:</label>
+      <input type="file" class="form-control" id="imageField" name="imageField" (change)="handleImageInput($event)" required>
+    </div>
+
+    <div class="d-grid">
+      <button type="submit" class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2">Guardar</button>
+    </div>
+  </form>
+</div>
