--- a/frontend/webapp14_2/src/app/templates/error/error.component.html
+++ b/frontend/webapp14_2/src/app/templates/error/error.component.html
@@ -1,1 +1,17 @@
-<p>error works!</p>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> <!-- Cambiar fixed-bottom por fixed-top -->
+  <div class="container px-4 px-lg-5">
+    <a class="navbar-brand">Ticket Event</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+  </div>
+</nav>
+<!-- Page Content-->
+<section>
+  <div class="container margin-top: 70%">
+    <div class="row gx-10 gx-lg-10">
+      <div class="col-lg-15">
+        <h1 class="mt-5 error-message">¡ERROR!</h1>
+      </div>
+    </div>
+  </div>
+</section>
