--- a/frontend/webapp14_2/src/app/templates/new-event/new-event.component.html
+++ b/frontend/webapp14_2/src/app/templates/new-event/new-event.component.html
@@ -11,12 +11,7 @@
 
     <div class="form-floating mb-3">
       <label for="date">Fecha:</label>
-      <input type="date" class="form-control" id="date" name="date" [(ngModel)]="newEvent.date" required>
-    </div>
-
-    <div class="form-floating mb-3">
-      <label for="hour">Hora del evento:</label>
-      <input type="time" class="form-control" id="hour" name="hour" [(ngModel)]="newEvent.hour" required>
+      <input type="text" class="form-control" id="date" name="date" [(ngModel)]="newEvent.date" required>
     </div>
 
     <div class="form-floating mb-3">
@@ -30,23 +25,8 @@
     </div>
 
     <div class="form-floating mb-3">
-      <label for="category">Categoría:</label>
-      <input type="text" class="form-control" id="category" name="category" [(ngModel)]="newEvent.category" required>
-    </div>
-
-    <div class="form-floating mb-3">
-      <label for="n_tickets">Plazas:</label>
-      <input type="number" class="form-control" id="n_tickets" name="n_tickets" [(ngModel)]="newEvent.n_tickets" required>
-    </div>
-
-    <div class="form-floating mb-3">
       <label for="description">Descripción:</label>
-      <textarea class="form-control" id="description" name="description" [(ngModel)]="newEvent.description" required></textarea>
-    </div>
-
-    <div class="form-floating mb-3">
-      <label for="imageField">Foto:</label>
-      <input type="file" class="form-control" id="imageField" name="imageField" (change)="handleImageInput($event)" required>
+      <textarea type="text" class="form-control" id="description" name="description" [(ngModel)]="newEvent.description" required></textarea>
     </div>
 
     <div class="d-grid">
