Subida de imagenes

--- a/frontend/webapp14_2/src/app/templates/new-event/new-event.component.html
+++ b/frontend/webapp14_2/src/app/templates/new-event/new-event.component.html
@@ -28,6 +28,10 @@
       <label for="description">Descripción:</label>
       <textarea type="text" class="form-control" id="description" name="description" [(ngModel)]="newEvent.description" required></textarea>
     </div>
+    <div class="form-group">
+      <label>Subir nueva imagen:</label><br>
+      <input type="file" (change)="onFileSelected($event)" name="imageField" accept=".jpg, .jpeg" /><br>
+    </div>
 
     <div class="d-grid">
       <button type="submit" class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2">Guardar</button>
