Cambios de ruta

--- a/frontend/webapp14_2/src/app/templates/register/register.component.html
+++ b/frontend/webapp14_2/src/app/templates/register/register.component.html
@@ -19,7 +19,7 @@
                   <label for="floatingSurname">Apellido</label>
                 </div>
                 <div class="form-floating mb-3">
-                  <input type="text" [(ngModel)]="nikename" class="form-control" id="floatingNick" placeholder="Nick" name="NICK">
+                  <input type="text" [(ngModel)]="NICK" class="form-control" id="floatingNick" placeholder="Nick" name="NICK">
                   <label for="floatingNick">Nick</label>
                 </div>
                 <div class="form-floating mb-3">
