--- a/frontend/webapp14_2/src/app/templates/login/login.component.html
+++ b/frontend/webapp14_2/src/app/templates/login/login.component.html
@@ -12,7 +12,7 @@
               <form>
                 <div class="form-floating mb-3">
                   <label for="floatingInput">Username</label>
-                  <input type="text" [(ngModel)]="nickname" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
+                  <input type="text" [(ngModel)]="NICK" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
                 </div>
                 <div class="form-floating mb-3">
                   <label for="floatingPassword">Password</label>
