--- a/frontend/webapp14_2/src/app/templates/profile/profile.component.html
+++ b/frontend/webapp14_2/src/app/templates/profile/profile.component.html
@@ -66,6 +66,9 @@
       <div class="row gx-4 mb-2">
         <div class="row  w-100">
         </div>
+        <div class="d-grid">
+          <button type="submit" class="btn btn-lg btn-primary btn-login text-uppercase fw-bold mb-2" (click)="goToEditProfile(user.id)" >Editar</button>
+        </div>
         <div class="row  w-100">
           <div class="h-100">
             <h5 class="mb-1">
@@ -142,6 +145,7 @@
       </div>
     </div>
   </div>
+
 </div>
 
 
